--- a/lab3/stream/stream/stream.vcxproj.filters
+++ b/lab3/stream/stream/stream.vcxproj.filters
@@ -37,10 +37,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="input.txt">
+    <None Include="input.dat">
       <Filter>Файлы ресурсов</Filter>
     </None>
-    <None Include="output.txt">
+    <None Include="output.dat">
       <Filter>Файлы ресурсов</Filter>
     </None>
   </ItemGroup>
